--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "dotenv": "^15.0.0",
     "express": "^4.17.2",
     "mongodb": "^4.3.1",
-    "mongoose": "^6.1.10"
+    "mongoose": "^6.1.10",
+    "mongoose-unique-validator": "^3.0.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.15"
