changed todo model

--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,5 +1,6 @@
 {
-    "bracketSpacing": true,
-    "singleQuote": true,
-    "semi": false
+  "bracketSpacing": true,
+  "singleQuote": true,
+  "semi": false,
+  "arrowParens": "avoid"
 }
